# lens-indexed-plated

./: .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  lens-indexed-plated.cabal
.github/workflows/: haskell.yml
examples/: Main.hs
src/Control/Lens/: IndexedPlated.hs
