cabal-version:      2.4

name:               lens-indexed-plated
version:            0.1.0
author:             Antoine Leblanc
maintainer:         nicuveo@gmail.com
homepage:           https://github.com/nicuveo/lens-indexed-plated
bug-reports:        https://github.com/nicuveo/lens-indexed-plated/issues
synopsis:           Indexed version of Plated.
description:
  This package contains an alternative version of lens' @Plated@ that
  allows for a user-specified index. Where @plate@ returns a
  @Traversal@, @indexedPlate@ returns a @IndexedTraversal@.

license:      BSD-2-Clause
license-file: LICENSE
copyright:    Copyright (C) 2023 Antoine Leblanc

extra-source-files:
  README.md
  CHANGELOG.md
  .gitignore
  .stylish-haskell.yaml

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Control.Lens.IndexedPlated
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Wcompat
    -Werror
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe
  build-depends:
    base ^>=4.16.4.0,
    lens

flag compile-examples
  manual: True
  default: False

executable examples
  if flag(compile-examples)
    buildable: True
  else
    buildable: False
  default-language: Haskell2010
  hs-source-dirs:   examples
  main-is:          Main.hs
  default-extensions:
    ImportQualifiedPost
  ghc-options:
    -Wcompat
    -Werror
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-orphans
    -Wno-safe
    -Wno-unsafe
  build-depends:
    base,
    lens,
    lens-indexed-plated,
    containers
